--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,7 @@
 {
     "routes": [
       { "src": "/", "dest": "/" },
+      { "src": "/dashboard", "dest": "/" },
       { "src": "/create-account", "dest": "/" },
       { "src": "/log-in-account", "dest": "/" },
       { "src": "/account-settings", "dest": "/" },
